@@ -1,5 +1,12 @@
 2008-08-24  Paolo Carlini  <paolo.carlini@oracle.com>
 
+	* acinclude.m4 ([GLIBCXX_CHECK_RANDOM_TR1]): Simplify, just use
+	two test -r instead of an AC_TRY_RUN.
+	* configure: Regenerate.
+	* config.h.in: Likewise.
+
+2008-08-24  Paolo Carlini  <paolo.carlini@oracle.com>
+
 	* acinclude.m4 ([GLIBCXX_ENABLE_CLOCK_GETTIME]): Improve documentation.
 	* doc/xml/manual/configure.xml: Likewise.
 
